--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -3,60 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="images/icon.png" />
+    <link rel="icon" href="images/icon.png" type="image/x-icon" />
     <link rel="stylesheet" href="styles/3-header.css" />
     <link rel="stylesheet" href="styles/3-footer.css" />
     <link rel="stylesheet" href="styles/4-common.css" />
     <link rel="stylesheet" href="styles/6-filters.css" />
   </head>
+
   <body>
     <header>
       <div class="logo"></div>
     </header>
     <div class="container">
-      <div class="filters">
+      <section class="filters">
         <div class="locations">
-          <h3>Locations</h3>
+          <h3>States</h3>
           <h4>California, Arizona...</h4>
           <ul class="popover">
             <li>
               <h2>California</h2>
-              <ul class="state-list">
-                <li>San Francisco</li>
-                <li>Los Angeles</li>
-              </ul>
             </li>
+            <li>San Francisco</li>
+            <li>Los Angeles</li>
             <li>
               <h2>Arizona</h2>
-              <ul class="state-list">
-                <li>Phoenix</li>
-                <li>Tucson</li>
-              </ul>
             </li>
+            <li>Phoenix</li>
+            <li>Tucson</li>
           </ul>
         </div>
         <div class="amenities">
           <h3>Amenities</h3>
           <h4>Internet, Kitchen...</h4>
           <ul class="popover">
-            <li>
-              <h2>Internet</h2>
-              <ul class="amenities-list">
-                <li>Wi-Fi</li>
-              </ul>
-            </li>
-            <li>
-              <h2>Kitchen</h2>
-              <ul class="amenities-list">
-                <li>Stove</li>
-                <li>Microwave</li>
-                <li>Dishes</li>
-              </ul>
-            </li>
+            <li>Internet</li>
+            <li>Kitchen</li>
           </ul>
         </div>
         <button>Search</button>
-      </div>
+      </section>
     </div>
     <footer>Holberton School</footer>
   </body>
